; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/tipc/extr_link.c_tipc_link_is_active.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/tipc/extr_link.c_tipc_link_is_active.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.link = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.link** }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tipc_link_is_active(%struct.link* %0) #0 {
  %2 = alloca %struct.link*, align 8
  store %struct.link* %0, %struct.link** %2, align 8
  %3 = load %struct.link*, %struct.link** %2, align 8
  %4 = getelementptr inbounds %struct.link, %struct.link* %3, i32 0, i32 0
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load %struct.link**, %struct.link*** %6, align 8
  %8 = getelementptr inbounds %struct.link*, %struct.link** %7, i64 0
  %9 = load %struct.link*, %struct.link** %8, align 8
  %10 = load %struct.link*, %struct.link** %2, align 8
  %11 = icmp eq %struct.link* %9, %10
  br i1 %11, label %22, label %12

12:                                               ; preds = %1
  %13 = load %struct.link*, %struct.link** %2, align 8
  %14 = getelementptr inbounds %struct.link, %struct.link* %13, i32 0, i32 0
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load %struct.link**, %struct.link*** %16, align 8
  %18 = getelementptr inbounds %struct.link*, %struct.link** %17, i64 1
  %19 = load %struct.link*, %struct.link** %18, align 8
  %20 = load %struct.link*, %struct.link** %2, align 8
  %21 = icmp eq %struct.link* %19, %20
  br label %22

22:                                               ; preds = %12, %1
  %23 = phi i1 [ true, %1 ], [ %21, %12 ]
  %24 = zext i1 %23 to i32
  ret i32 %24
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
